single/api-book-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-book 
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: api-book
spec:
  replicas: 3
  selector:
    matchLabels:
      application: api-book
  template:
    metadata:
      labels:
        application: api-book
    spec:
      containers:
      - name: api-book
        image: jonathanbaraldi/api-book:dev

        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
