single/api-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 2mc
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: 2mc
spec:
  replicas: 3
  selector:
    matchLabels:
      application: 2mc
  template:
    metadata:
      labels:
        application: 2mc
    spec:
      containers:
      - name: 2mc
        image: jonathanbaraldi/2mc-api:dev2

        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
