single/api-song-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-song 
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: api-song
spec:
  replicas: 3
  selector:
    matchLabels:
      application: api-song
  template:
    metadata:
      labels:
        application: api-song
    spec:
      containers:
      - name: api-song
        image: jonathanbaraldi/api-song:dev

        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
