single/frontend-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 2mc-frontend
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: 2mc-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      application: 2mc-frontend
  template:
    metadata:
      labels:
        application: 2mc-frontend
    spec:
      containers:
      - name: 2mc-frontend
        image: jonathanbaraldi/static-api:dev4

        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/api.js
          subPath: api.js

        ports:
        - containerPort: 80
        securityContext:
          privileged: true
      volumes:
      - name: config-volume
        configMap:
          name: 2mc-configmap
