single/api-book-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-book
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8000 # Porta que a aplicação está rodando no POD
  selector:
    application: api-book
