single/api-song-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-song 
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8000 # Porta que a aplicação está rodando no POD
  selector:
    application: api-song
