single/app.yaml


---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 2mc
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: 2mc
spec:
  replicas: 3
  selector:
    matchLabels:
      application: 2mc
  template:
    metadata:
      labels:
        application: 2mc
    spec:
      containers:
      - name: 2mc
        image: jonathanbaraldi/2mc-api:dev

        ports:
        - containerPort: 8080
        securityContext:
          privileged: true


---
apiVersion: v1
kind: Service
metadata:
  name: mc
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8080 # Porta que a aplicação está rodando no POD
  selector:
    application: 2mc


# ---
# kind: Ingress
# apiVersion: extensions/v1beta1
# metadata:
#   name: 2mc
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/router.tls: "true"
#     traefik.ingress.kubernetes.io/router.tls.certresolver: default
# spec:
#   rules:
#     - host: 2mc.rancher.<SEU_DOMINIO>
#       http:
#         paths:
#           - backend:
#               serviceName: whoami5
#               servicePort: 80
# 
#
