single/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc-frontend
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 8000 # Porta a ser exposta pelo SERVICE
    targetPort: 8000 # Porta que a aplicação está rodando no POD
  selector:
    application: 2mc-frontend
