single/api-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: 2mc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: api.rancher.<DOMINIO>
      http:
        paths:
          - backend:
              serviceName: mc
              servicePort: 8000
