single/cockroachdb-ingress.yaml

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: cockroachdb
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: cockroachdb.rancher.dev-ops-ninja.com
      http:
        paths:
          - backend:
              serviceName: cockroachdb
              servicePort: 8080
